refactored analytic controller